# bled

./: .gitignore  Makefile.am  Makefile.in  README.md  bled.sln  configure  configure.ac
src/: Makefile.am  Makefile.in  bled.c  bled.h  bled_size.c  data_extract_all.c  decompress_bunzip2.c  decompress_gunzip.c  decompress_unlzma.c  decompress_unxz.c  decompress_unzip.c  libbb.h  msapi_utf8.h  open_transformer.c  platform.h  seek_by_jump.c  xz_config.h  xz_dec_lzma2.c  xz_dec_stream.c
src/.msvc/: bled.vcxproj  bled.vcxproj.filters
test/: Makefile.am  Makefile.in  cmp.c  test.c  uncompress.c
test/.msvc/: cmp.vcxproj  cmp.vcxproj.filters  test.vcxproj  test.vcxproj.filters  uncompress.vcxproj  uncompress.vcxproj.filters
test/data/: xz.Z  xz.bz2  xz.lzma  xz.xz  xz.zst
