noinst_PROGRAMS = cmp test uncompress

cmp_SOURCES = cmp.c
cmp_CFLAGS  = $(AM_CFLAGS)
cmp_LDFLAGS = $(AM_LDFLAGS)
cmp_LDADD = ../src/libbled.a

test_SOURCES = test.c
test_CFLAGS  = $(AM_CFLAGS)
test_LDFLAGS = $(AM_LDFLAGS)
test_LDADD = ../src/libbled.a

uncompress_SOURCES = uncompress.c
uncompress_CFLAGS  = $(AM_CFLAGS)
uncompress_LDFLAGS = $(AM_LDFLAGS)
uncompress_LDADD = ../src/libbled.a
